Fix possible img overflow
Happens when img is nested in divs

--- a/src/app/reader/reader.component.scss
+++ b/src/app/reader/reader.component.scss
@@ -41,7 +41,7 @@
   }
 
   img {
-    max-height: 100%;
+    max-height: var(--content-child-height, 100%);
   }
 
   ruby > rt {
